// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render selector 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="selectorContainer"
  >
    <div
      class="MuiFormControl-root selectorForm"
    >
      <label
        class="MuiFormLabel-root MuiFormLabel-error MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink="true"
      >
        
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-error MuiInput-error MuiInputBase-formControl MuiInput-formControl"
        data-testid="selector"
      >
        <div
          class="MuiSelect-root"
        >
          <div
            aria-haspopup="true"
            aria-owns="menu-test-selector"
            aria-pressed="true"
            class="MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            data-testid="selector-button"
            role="button"
            tabindex="0"
          >
            test text 1
          </div>
          <input
            id="selector"
            name="test-selector"
            type="hidden"
            value="testKey1"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root MuiFormHelperText-error MuiFormHelperText-filled"
        id="selector-selector-helpertext"
      >
        test helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`render selector with empty selector data 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    Nothing to select
  </span>
</div>
`;

exports[`render selector with readonly 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    test text 1
  </span>
</div>
`;

exports[`render selector without selected value 1`] = `
<div>
  <div
    class="selectorContainer"
  >
    <div
      class="MuiFormControl-root selectorForm"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink="false"
      >
        
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        data-testid="selector"
      >
        <div
          class="MuiSelect-root"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            data-testid="selector-button"
            role="button"
            tabindex="0"
          >
            Select
          </div>
          <input
            id="selector"
            name="test-selector"
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root"
        id="selector-selector-helpertext"
      />
    </div>
  </div>
</div>
`;
